feat(backend): implement proportional nutrition estimation